--- a/distribution-crowd-4-redis-provider/pom.xml
+++ b/distribution-crowd-4-redis-provider/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>cn.ct.cloud</groupId>
+            <artifactId>distribution-crowd-1-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
